--- a/styles/src/styles.scss
+++ b/styles/src/styles.scss
@@ -22,6 +22,19 @@ a {
     color: $color-accent;
 }
 
+pre {
+    background-color: #e0e0e0;
+    overflow: auto;
+
+    code {
+        background-color: inherit;
+    }
+}
+
+code {
+    background-color: #e0e0e0;
+}
+
 // utility classes
 
 .pseudo-link {
@@ -127,14 +140,18 @@ a {
 
 #main-content {
     width: calc(#{100% - $sidebar-width} - 1rem);
-    padding-right: 1rem;
+    padding-right: 1.5rem;
+}
+
+#post-previews {
+    margin-bottom: 1rem;
 }
 
 .post {
     &:not(:last-child) {
         border-bottom: solid black 1px;
-        padding-bottom: 3rem;
         margin-bottom: 1rem;
+        padding-bottom: 1rem;
     }
 
     .post-header {
@@ -143,13 +160,41 @@ a {
         margin-bottom: 1rem;
     }
 
-    .post-body {
-        margin-bottom: 2rem;
+    .post-footer {
+        .post-signature {
+            color: $color-accent-dark;
+            text-align: right;
+        }
+    }
+}
+
+#pager {
+    text-align: center;
+
+    .pager-label {
+        margin-left: 0.4rem;
+        margin-right: 0.4rem;
     }
 
-    .post-footer {
-        color: $color-accent-dark;
-        float: right;
+    .pager-control {
+        font-size: 1.6rem;
+        user-select: none;
+
+        &:not(:first-child) {
+            margin-left: 0.2rem;
+        }
+
+        &:not(:last-child) {
+            margin-right: 0.2rem;
+        }
+
+        &.disabled {
+            color: #bbbbbb;
+        }
+
+        a {
+            color: $color-accent-dark;
+        }
     }
 }
 
@@ -192,6 +237,7 @@ a {
 
             li {
                 padding: 0;
+                margin-left: 0.5rem;
                 margin-bottom: 0.5rem;
 
                 &.older {
@@ -259,6 +305,7 @@ a {
     text-align: center;
     border-top: solid 1px $color-text;
     padding-top: 1rem;
+    margin-bottom: 1rem;
 
     .footer-section:not(:last-child) {
         margin-bottom: 0.8rem;
