--- a/styles/src/styles.scss
+++ b/styles/src/styles.scss
@@ -35,6 +35,46 @@ code {
     background-color: #e0e0e0;
 }
 
+button {
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+    padding-top: 0.6rem;
+    padding-bottom: 0.6rem;
+    box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.4);
+    font-size: 1rem;
+    background-color: #999999;
+    color: white;
+
+    &::-moz-focus-inner {
+        border: none;
+    }
+
+    .fa-spin {
+        font-size: 1.1rem;
+        margin-left: 0.6rem;
+    }
+
+    &.btn-primary {
+        background-color: #1f6cff;
+
+        &[disabled=disabled] {
+            cursor: default;
+            background-color: #5792ff;
+        }
+    }
+
+    >.fa-spin {
+        display: none;
+    }
+
+    &[disabled=disabled] > .fa-spin {
+        display: inline-block;
+    }
+}
+
 // utility classes
 
 .pseudo-link {
@@ -143,6 +183,32 @@ code {
     padding-right: 1.5rem;
 }
 
+.header {
+    font-size: 1.4rem;
+    color: $color-accent-dark;
+    margin-bottom: 1rem;
+}
+
+.edit-section {
+    &:not(:last-child) {
+        margin-bottom: 0.8rem;
+    }
+
+    .edit-label {
+        font-size: 0.9rem;
+    }
+
+    #edit-title-input {
+        width: 60%;
+    }
+
+    #edit-content-input {
+        width: 100%;
+        max-width: 100%;
+        height: 35rem;
+    }
+}
+
 #post-previews {
     margin-bottom: 1rem;
 }
@@ -155,9 +221,7 @@ code {
     }
 
     .post-header {
-        font-size: 1.4rem;
-        color: $color-accent-dark;
-        margin-bottom: 1rem;
+        @extend .header;
     }
 
     .post-footer {
