Organization changes; sidebar QoL fix

--- a/styles/src/styles.scss
+++ b/styles/src/styles.scss
@@ -323,10 +323,12 @@ button {
 
                 &.older {
                     display: none;
+                }
+            }
 
-                    &.expanded {
-                        display: list-item;
-                    }
+            &.expanded {
+                .older {
+                    display: list-item;
                 }
             }
         }
