Slightly darken navbar background in dark mode

--- a/src/styles/src/styles.scss
+++ b/src/styles/src/styles.scss
@@ -30,7 +30,7 @@ $color-l-alert: #d00000;
 
 $color-d-background: #282828;
 $color-d-text: #F5F5F5;
-$color-d-navbar-background: #222222;
+$color-d-navbar-background: #1E1E1E;
 $color-d-navbar-foreground: #97AEE7;
 $color-d-header: #5E87eD;
 $color-d-link: #97AEE7;
